[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Humre"
authors = [
    {name = "Al Sweigart", email = "al@inventwithpython.com"},
]
description = """A human-readable regular expression module for Python. Humre handles regex syntax for you and creates regex strings to pass to Python's re.compile(). Pronounced "hum, ree"."""
readme = "README.md"
keywords = ["regex", "re", "regular expression"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.5"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/asweigart/humre"
"Bug Tracker" = "https://github.com/asweigart/humre/issues"

[tool.setuptools.dynamic]
version = {attr = "humre.__version__"}
